--- a/views/pages/order.ejs
+++ b/views/pages/order.ejs
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="/css/main.css">
 </head>
 <body class="bg-slate-200">
-    
+    <div><%= result.id %></div>
 </body>
 </html>
