--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -5,8 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/menu.css">
+    <style>
+    </style>
 </head>
 <body class="bg-slate-200">
-    
+    <%- include('./../partials/_menu') %>
+    <%- include('./../partials/_products') %>
 </body>
 </html>
