--- a/views/pages/user.ejs
+++ b/views/pages/user.ejs
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/css/main.css">
 </head>
-<body class="bg-slate-200">
+<body>
     
 </body>
 </html>
