--- a/views/partials/_menu.ejs
+++ b/views/partials/_menu.ejs
@@ -1,17 +1,19 @@
 <!-- header container -->
-<header class="text-gray-600 body-font fixed top-0 w-full bg-violet-300/50">
+<header class="text-gray-600 body-font fixed top-0 w-full bg-violet-950/25 backdrop-blur-sm">
   <!-- header box -->
   <div class="container mx-auto grid grid-cols-3 items-center">
     <!-- logo -->
-    <a class="rounded-lg h-20 bg-slate-500 justify-self-start">
+    <a class="rounded-lg h-10 bg-slate-500 justify-self-start">
       <img src="/logo.svg" alt="" srcset="" class="h-full rounded-lg">
     </a>
     <!-- nav menu -->
-    <nav class="text-base space-x-3 grid grid-flow-col justify-between">
-      <a class="hover:text-gray-900">First Link</a>
-      <a class="hover:text-gray-900">Second Link</a>
-      <a class="hover:text-gray-900">Third Link</a>
-      <a class="hover:text-gray-900">Fourth Link</a>
+    <nav class="text-base grid grid-flow-col justify-between items-stretch self-stretch w-max">
+      <a class="menu-links">First Link</a>
+      <a class="menu-links">Second Link</a>
+      <a class="menu-links">Third Link</a>
+      <a class="menu-links">Third Link</a>
+      <a class="menu-links">Third Link</a>
+      <a id="bagetButton" class="menu-links">Sebet</a>
     </nav>
     <!-- sign button -->
     <button class="bg-gray-100 border-0 hover:bg-gray-200 rounded text-base py-2 px-4 justify-self-end">
