--- a/views/partials/_baget.ejs
+++ b/views/partials/_baget.ejs
@@ -4,7 +4,8 @@
     <!-- baget Emty Zone -->
     <div id="bagetSectionEmtyZone" class="fixed left-0 top-0 bottom-0 w-3/5"></div>
     <!-- baget side box -->
-    <div id="bagetContainer" class="bagetZ w-2/5 fixed right-0 bottom-0 top-0">
+    <div id="bagetContainer" class="bagetZ w-2/5 fixed right-0 bottom-0 top-0
+        lg:w-3/5">
         <!-- baget -->
         <div id="baget" class="p-3 space-y-3 w-full h-[92%] bg-slate-300 overflow-y-auto">
         </div>
@@ -21,10 +22,10 @@
     </div>
 </section>
 
-<!-- buget section container -->
+<!-- checkout section container -->
 <section id="checkoutWindow" class="checkoutZ hidden fixed top-0 left-0 w-screen h-screen place-items-center bg-black/25 backdrop-blur-sm">
     <!-- checkout window -->
-    <form id="checkoutForm" class="z-[22] relative h-4/5 w-2/5 grid bg-violet-400 p-12 rounded-lg items-start justify-stretch">
+    <form id="checkoutForm" class="z-[22] relative w-[90%] h-4/5 lg:w-2/5 grid bg-violet-400 p-12 rounded-lg items-start justify-stretch">
         <!-- checkout Emty Zone -->
     	<div id="checkoutWindowEmtyZone" class="absolute top-0 right-0 translate-x-1/2 -translate-y-1/2 w-10 h-10">
             <img src="/close.svg" alt="" class="rounded-full bg-violet-500 w-full h-full shadow-md">
