--- a/views/partials/_menu.ejs
+++ b/views/partials/_menu.ejs
@@ -1,25 +1,43 @@
 <!-- header container -->
-<header class="text-gray-600 body-font fixed top-0 w-full bg-violet-950/25 backdrop-blur-sm">
+<header class="text-gray-600 body-font fixed bottom-0 lg:top-0 lg:bottom-auto w-full bg-violet-950/25 backdrop-blur-sm">
   <!-- header box -->
-  <div class="container mx-auto grid grid-cols-3 items-center">
+  <div class="container mx-auto grid grid-flow-col">
     <!-- logo -->
     <a class="rounded-lg h-10 bg-slate-500 justify-self-start">
       <img src="/logo.svg" alt="" srcset="" class="h-full rounded-lg">
     </a>
     <!-- nav menu -->
-    <nav class="text-base grid grid-flow-col justify-between items-stretch self-stretch w-max">
+    <nav
+      class="text-base hidden lg:grid grid-flow-col items-stretch self-stretch w-max justify-self-center">
       <a class="menu-links">First Link</a>
       <a class="menu-links">Second Link</a>
       <a class="menu-links">Third Link</a>
       <a class="menu-links">Third Link</a>
       <a class="menu-links">Third Link</a>
-      <a id="bagetButton" class="menu-links">Sebet</a>
     </nav>
-    <!-- sign button -->
-    <button class="bg-gray-100 border-0 hover:bg-gray-200 rounded text-base py-2 px-4 justify-self-end">
-      Sign    
-    </button>
 
+    <!-- sign button  and baget-->
+    <div class="grid grid-cols-2 justify-self-stretch d">
+      <button
+        class="bg-gray-100 border-0 hover:bg-gray-200 rounded text-base py-2 px-4 justify-self-start">
+        Sign
+      </button>
+      <a id="bagetButton" class="bg-violet-700 text-white p-2 rounded-md justify-self-end">Sebet</a>
+    </div>
+
+    <!-- menu button -->
+    <button id="menuButton" class="bg-violet-700 text-white p-2 rounded-md justify-self-end lg:hidden">Menyu</button>
   </div>
 
 </header>
+
+<!-- blur background for aside -->
+<div id="asideSection" class="fixed w-full h-full  bg-black/25 backdrop-blur-sm hidden"></div>
+<!-- nav for max-width 1024px -->
+<aside class="hidden content-end fixed right-0 h-full bg-slate-400">
+  <a class="menu-links-b">First Link</a>
+  <a class="menu-links-b">Second Link</a>
+  <a class="menu-links-b">Third Link</a>
+  <a class="menu-links-b">Third Link</a>
+  <a class="menu-links-b">Third Link</a>
+</aside>
