--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -58,7 +58,11 @@
     <!-- products page -->
     <%- include('./../partials/_products') %>
 
+    <!-- Sign page -->
+    <%- include('./../partials/_sign') %>
+
     <script src="/js/baget.js"></script>
     <script src="/js/menu.js"></script>
+    <script src="/js/sign.js"></script>
   </body>
 </html>
