--- a/views/partials/_baget.ejs
+++ b/views/partials/_baget.ejs
@@ -4,7 +4,7 @@
     <!-- baget Emty Zone -->
     <div id="bagetSectionEmtyZone" class="fixed left-0 top-0 bottom-0 w-3/5"></div>
     <!-- baget side box -->
-    <div id="bagetContainer" class="bagetZ w-2/5 fixed right-0 bottom-0 top-0
+    <div id="bagetContainer" class="bagetZ w-[90%] fixed right-0 bottom-0 top-0
         lg:w-3/5">
         <!-- baget -->
         <div id="baget" class="p-3 space-y-3 w-full h-[92%] bg-slate-300 overflow-y-auto">
