--- a/views/partials/_menu.ejs
+++ b/views/partials/_menu.ejs
@@ -32,12 +32,15 @@
 </header>
 
 <!-- blur background for aside -->
-<div id="asideSection" class="fixed w-full h-full  bg-black/25 backdrop-blur-sm hidden"></div>
+<div id="asideSection" class="fixed w-full h-full bg-black/25 backdrop-blur-sm hidden"></div>
 <!-- nav for max-width 1024px -->
-<aside class="hidden content-end fixed right-0 h-full bg-slate-400">
-  <a class="menu-links-b">First Link</a>
-  <a class="menu-links-b">Second Link</a>
-  <a class="menu-links-b">Third Link</a>
-  <a class="menu-links-b">Third Link</a>
-  <a class="menu-links-b">Third Link</a>
+<aside class="hidden content-end fixed right-0 h-full bg-slate-700/70 text-white text-lg">
+  <a class="menu-links-b">Elektronika</a> 
+  <a class="menu-links-b">Mebel</a>
+  <a class="menu-links-b">Kanselýar</a>
+  <a class="menu-links-b">Azyk</a>
+  <a class="menu-links-b">Hojalyk</a>
+  <a class="menu-links-b">Geýim</a>
+  <a class="menu-links-b">Parfumeriýa</a>
+  <a class="menu-links-b">Şaý-Sep</a>
 </aside>
