--- a/views/partials/_products.ejs
+++ b/views/partials/_products.ejs
@@ -1,4 +1,5 @@
 <section>
+
 <!-- products container -->
 <div class="container justify-center lg:mt-16 mx-auto gap-3 p-5 bg-inherit grid 
     grid-cols-3
@@ -8,7 +9,7 @@
     2xl:grid-cols-10 2xl:text-xs 2xl:gap-2
 ">
      
-    <% result.forEach(product => { %>
+    <% products.forEach(product => { %>
 
     <!-- product contain -->
     <div class="justify-self-stretch bg-white overflow-hidden rounded-lg grid shadow-2xl">
