login back side fixes

--- a/views/partials/_menu.ejs
+++ b/views/partials/_menu.ejs
@@ -7,8 +7,15 @@
       <img src="/logo.svg" alt="" srcset="" class="h-full rounded-lg">
     </a>
     <!-- nav menu -->
-    <nav
-      class="text-base hidden lg:grid grid-flow-col items-stretch self-stretch w-max justify-self-center">
+    <nav class="text-base hidden lg:grid grid-flow-col items-stretch self-stretch w-max justify-self-center">
+      <a class="menu-links">Elektronika</a>
+      <a class="menu-links">Mebel</a>
+      <a class="menu-links">Kanselýar</a>
+      <a class="menu-links">Azyk</a>
+      <a class="menu-links">Hojalyk</a>
+      <a class="menu-links">Geýim</a>
+      <a class="menu-links">Parfumeriýa</a>
+      <a class="menu-links">Şaý-Sep</a>
     </nav>
 
     <!-- sign button  and baget-->
