--- a/public/css/main.css
+++ b/public/css/main.css
@@ -496,6 +496,51 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.messageElement {
+  margin-top: 0px;
+  max-height: 0px;
+  max-width: 0rem;
+}
+
+@keyframes newMessage {
+  10% {
+    max-height: 200px;
+    max-width: 640px;
+    padding: 5px;
+    margin-top: 5px;
+  }
+
+  90% {
+    max-height: 200px;
+    max-width: 640px;
+    padding: 5px;
+    margin-top: 5px;
+  }
+
+  100% {
+    display: none;
+    max-height: 0;
+    max-width: 0;
+    padding: 0;
+    margin-top: 0;
+  }
+}
+
+.messageElement {
+  animation: newMessage 6s forwards;
+  overflow: hidden;
+  white-space: nowrap;
+  border-radius: 0.375rem;
+  --tw-bg-opacity: 1;
+  background-color: rgb(139 92 246 / var(--tw-bg-opacity));
+  padding: 0px;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+  --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
+  --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 @media (max-width: 1024px) {
   aside.active {
     display: grid;
@@ -799,14 +844,14 @@ video {
 @keyframes newMessage {
   10% {
     max-height: 200px;
-    max-width: 200px;
+    max-width: 640px;
     padding: 5px;
     margin-top: 5px;
   }
 
   90% {
     max-height: 200px;
-    max-width: 200px;
+    max-width: 640px;
     padding: 5px;
     margin-top: 5px;
   }
