--- a/src/input.css
+++ b/src/input.css
@@ -15,6 +15,9 @@
     .btn-add-to-cart{
         @apply hover:scale-105 hover:drop-shadow-lg active:scale-95 transition-all duration-75
     }
+    .messageElement{
+        @apply text-white animate-newMessage shadow-2xl rounded-md max-h-0 max-w-0 p-0 mt-0 whitespace-nowrap overflow-hidden bg-violet-500
+    }
     @media (max-width: 1024px) {
         aside.active {
           @apply grid;
