logging in and signing up is ok for now

--- a/views/partials/_sign.ejs
+++ b/views/partials/_sign.ejs
@@ -17,7 +17,7 @@
         <input type="submit" value="Indiki" class="bg-violet-800 text-white rounded-xl p-2">
 
         <!-- code validation section -->
-        <input id="codeValidationInput" name="validation_code" type="text" class="checkoutInputs hidden">
+        <input id="codeValidationInput" name="validation_code" type="text" placeholder="Nomeriňize gelen kod" class="checkoutInputs hidden">
 
     </form>
 
