almost completed login and register

--- a/views/partials/_menu.ejs
+++ b/views/partials/_menu.ejs
@@ -21,6 +21,7 @@
     <!-- sign button  and baget-->
     <div class="grid grid-cols-2 justify-self-stretch d">
       <button
+        onclick="signWindowClose()"
         class="bg-gray-100 border-0 hover:bg-gray-200 rounded text-base py-2 px-4 justify-self-start">
         Sign
       </button>
